--- a/style.css
+++ b/style.css
@@ -101,3 +101,42 @@
       height: calc(100vh - 65.18px);
     }
   }
+
+  li {list-style-type: none;
+    font-size: 16pt;
+    }
+    .mail {
+    margin: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 400px;
+    background : 
+    #D8F1F8;
+    border: 1px soild 
+    silver;
+    }
+    .mail h2 {
+    margin-left: 38px;
+    }
+    input {
+    font-size: 20pt;
+    }
+    input:invalid {
+      background-color: ivory;
+      border: none;
+      outline: 2px solid red;
+      border-radius: 5px;
+    }
+    
+    input:focus, textarea:focus{
+    background-color: 
+    lightyellow;
+    }
+    input submit {
+    font-size: 12pt;
+    }
+    .rq {
+    color: 
+    #FF0000;
+    font-size: 10pt;
+    }
